# gabelstaplerwm

./: .gitignore  Cargo.toml  IDEAS.md  LICENSE  NOTES.md  README.md  xephyr  xinitrc
extra/mousetrap/: Cargo.toml
extra/mousetrap/src/: lib.rs
gwm-core/: Cargo.toml
gwm-core/src/: config.rs  lib.rs  main.rs  tree.rs
gwm-core/src/layout/: mod.rs
gwm-core/src/wm/: core.rs  err.rs  mod.rs  msg.rs
gwm-kbd/: Cargo.toml  gwmkbdrc.toml
gwm-kbd/src/: lib.rs  main.rs
gwm-kbd/src/kbd/: config.rs  desc.rs  err.rs  error.rs  mod.rs  modmask.rs  state.rs  types.rs
src/: lib.rs  main.rs  wm.rs
src/gabelstaplerwm-core/: Cargo.toml
src/gabelstaplerwm-core/src/: main.rs
src/gabelstaplerwm-core/src/wm/: err.rs  util.rs
src/wm/: :w  alien.rs  client.rs  config.rs  core.rs  err.rs  kbd.rs  layout.rs  mod.rs  msg.rs  tree.rs  util.rs  window_system.rs
src/wm/layout/: dstack.rs  grid.rs  hstack.rs  mod.rs  monocle.rs  spiral.rs  stack.rs  tree.rs  vstack.rs
