[package]
name = "gabelstaplerwm"
version = "0.5.0"
authors = ["Inokentiy Babushkin <inokentiy.babushkin@googlemail.com>"]
description = "A semidynamic tiling window manager using XCB"
documentation = "https://ibabushkin.github.io/rustdoc/gabelstaplerwm/"
homepage = "https://ibabushkin.github.io/"
repository = "https://github.com/ibabushkin/gabelstaplerwm"
readme = "README.md"
keywords = ["xcb", "window manager", "X"]
license = "BSD3"

[features]
default = ["parallel-resizing"]
parallel-resizing = []
no-xephyr = []

[dependencies]
env_logger = "*"
vec-arena = "^0.1.1"
libc = "*"
log = "*"
xcb = { version = "0.7.6", features = ["xkb", "randr"] }

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
