[package]
name = "gabelstaplerwm"
version = "0.7.0"
authors = ["Inokentiy Babushkin <twk@twki.de>"]
description = "A semidynamic tiling window manager using XCB"
documentation = "https://ibabushkin.github.io/rustdoc/gabelstaplerwm/"
homepage = "https://ibabushkin.github.io/"
repository = "https://github.com/ibabushkin/gabelstaplerwm"
readme = "README.md"
keywords = ["xcb", "window manager", "X"]
license = "BSD3"

[features]
default = ["parallel-resizing"]
parallel-resizing = []
no-xephyr = []

[dependencies]
libc = "*"
env_logger = "*"
log = "*"
xcb = { version = "0.7.6", features = ["xkb", "randr"] }
pledge = { version = "*", optional = true }

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
