[package]
name = "gabelstaplerwm"
version = "0.8.0"
authors = ["Inokentiy Babushkin <twk@twki.de>"]
description = "A semidynamic tiling window manager using XCB"
documentation = "https://ibabushkin.github.io/rustdoc/gabelstaplerwm/"
homepage = "https://ibabushkin.github.io/"
repository = "https://github.com/ibabushkin/gabelstaplerwm"
readme = "README.md"
keywords = ["xcb", "window manager", "X"]
license = "BSD3"

[dependencies]
libc = "^0.2"
env_logger = "^0.4"
log = "^0.3"
xcb = { version = "^0.8", features = ["xkb", "randr"] }
# pledge = { version = "*", optional = true }

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
