[package]
name = "gwm-core"
version = "0.8.0"
authors = ["Inokentiy Babushkin <twk@twki.de>"]
description = "A semidynamic tiling window manager using XCB"
documentation = "https://ibabushkin.github.io/rustdoc/gabelstaplerwm/"
homepage = "https://ibabushkin.github.io/"
repository = "https://github.com/ibabushkin/gabelstaplerwm"
readme = "../README.md"
keywords = ["xcb", "window manager", "X"]
license = "BSD3"

[dependencies]
generational-arena = "^0.2"
