[package]
name = "gwm-kbd"
version = "0.1.0"
authors = ["Inokentiy Babushkin <twk@twki.de>"]
description = "A keybinding deamon for gabelstaplerwm."
documentation = "https://ibabushkin.github.io/rustdoc/gabelstaplerwm/"
homepage = "https://ibabushkin.github.io/"
repository = "https://github.com/ibabushkin/gabelstaplerwm"
readme = "../README.md"
keywords = ["xcb", "window manager", "X"]
license = "BSD3"

[dependencies]
# libc = "^0.2"
env_logger = "^0.6"
getopts = "^0.2.15"
log = "^0.4"
toml = "^0.4.5"
xcb = { version = "^0.8", features = ["xkb"] }
xkb = { version = "^0.2", features = ["x11"] }
# pledge = { version = "*", optional = true }

# [replace]
# "xkb:0.1.2" = { git = "https://github.com/ibabushkin/rust-xkb" }
